# snprs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: differ.rs  importer.rs  main.rs  model.rs  parser.rs  routes.rs  store.rs  zygosity.rs
static/: diff.html  index.html  zygosity.html
