[package]
name = "snprs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
bitcode = "0.6.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
lmdb = "0.8.0"
actix-web = { version = "4.13.0", features = ["compress-gzip"] }
actix-cors = "0.7.1"
actix-files = "0.6"
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true